Adicionado logpty para mostrar as faces coloridas no console

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>ickrub</title>
 
+	<script src="lib/logpty/log-pty.js"></script>
 	<script src="index.js"></script>
 </head>
 <body>
