--- a/index.html
+++ b/index.html
@@ -8,8 +8,134 @@
 
 	<script src="lib/logpty/log-pty.js"></script>
 	<script src="index.js"></script>
+
+	<style>
+		.hidden {
+			visibility: hidden;
+		}
+		.face {
+			width: 66px;
+			height: 66px;
+		}
+		.face div {
+			width: 20px;
+			height: 20px;
+		}
+		.col {
+			float: left;
+		}
+		.col.face div {
+			float: left;
+			border: 1px solid black;
+		}
+		.row {
+			overflow: hidden;
+		}
+		#l {
+			height: 70px;
+			width: 66px;
+			-ms-transform: skewY(50deg); /* IE 9 */
+			-webkit-transform: skewY(50deg); /* Safari */
+			transform: skewY(50deg); /* Standard syntax */
+
+			border: 1px solid black;
+		}
+		#r {
+			-ms-transform: skewY(-50deg); /* IE 9 */
+			-webkit-transform: skewY(-50deg); /* Safari */
+			transform: skewY(-50deg); /* Standard syntax */
+		}
+	</style>
 </head>
 <body>
+	<div class="row">
+		<div class="col face" id="b">
+			<div class="0x0"></div>
+			<div class="0x1"></div>
+			<div class="0x2"></div>
+			<div class="1x0"></div>
+			<div class="1x1"></div>
+			<div class="1x2"></div>
+			<div class="2x0"></div>
+			<div class="2x1"></div>
+			<div class="2x2"></div>
+		</div>
+		<div class="col hidden face">
+		</div>
+		<div class="col hidden face">
+		</div>
+	</div>
 
+	<div class="row">
+		<div class="col hidden face">
+		</div>
+		<div class="col face" id="u">
+			<div class="0x0"></div>
+			<div class="0x1"></div>
+			<div class="0x2"></div>
+			<div class="1x0"></div>
+			<div class="1x1"></div>
+			<div class="1x2"></div>
+			<div class="2x0"></div>
+			<div class="2x1"></div>
+			<div class="2x2"></div>
+		</div>
+		<div class="col hidden face">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col face" id="l">
+			<div class="0x0"></div>
+			<div class="0x1"></div>
+			<div class="0x2"></div>
+			<div class="1x0"></div>
+			<div class="1x1"></div>
+			<div class="1x2"></div>
+			<div class="2x0"></div>
+			<div class="2x1"></div>
+			<div class="2x2"></div>
+		</div>
+		<div class="col face" id="f">
+			<div class="0x0"></div>
+			<div class="0x1"></div>
+			<div class="0x2"></div>
+			<div class="1x0"></div>
+			<div class="1x1"></div>
+			<div class="1x2"></div>
+			<div class="2x0"></div>
+			<div class="2x1"></div>
+			<div class="2x2"></div>
+		</div>
+		<div class="col face" id="r">
+			<div class="0x0"></div>
+			<div class="0x1"></div>
+			<div class="0x2"></div>
+			<div class="1x0"></div>
+			<div class="1x1"></div>
+			<div class="1x2"></div>
+			<div class="2x0"></div>
+			<div class="2x1"></div>
+			<div class="2x2"></div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col hidden face">
+		</div>
+		<div class="col face" id="d">
+			<div class="0x0"></div>
+			<div class="0x1"></div>
+			<div class="0x2"></div>
+			<div class="1x0"></div>
+			<div class="1x1"></div>
+			<div class="1x2"></div>
+			<div class="2x0"></div>
+			<div class="2x1"></div>
+			<div class="2x2"></div>
+		</div>
+		<div class="col hidden face">
+		</div>
+	</div>
 </body>
 </html>
