--- a/index.html
+++ b/index.html
@@ -9,135 +9,100 @@
 	<script src="lib/logpty/log-pty.js"></script>
 	<script src="index.js"></script>
 
-	<style>
-		.hidden {
-			visibility: hidden;
-		}
-		.face {
-			width: 66px;
-			height: 66px;
-		}
-		.face .quadradinho {
-			width: 20px;
-			height: 20px;
-		}
-		.col {
-			float: left;
-		}
-		.col.face .quadradinho {
-			float: left;
-			border: 1px solid black;
-		}
-		.row {
-			height: 90px;
-		}
-		#l {
-			-ms-transform: scale(1, 0.6) rotate(50deg) skewX(50deg); /* IE 9 */
-			-webkit-transform: scale(1, 0.6) rotate(50deg) skewX(50deg); /* Safari */
-			transform: scale(1, 0.6) rotate(50deg) skewX(50deg); /* Standard syntax */
-		}
-		#r {
-			-ms-transform: scale(1, 0.6) rotate(-50deg) skewX(-50deg); /* IE 9 */
-			-webkit-transform: scale(1, 0.6) rotate(-50deg) skewX(-50deg); /* Safari */
-			transform: scale(1, 0.6) rotate(-50deg) skewX(-50deg); /* Standard syntax */
-		}
-		#l, #r {
-			width: 60px;
-			margin-top: -15px;
-		}
-		#l .quadradinho, #r .quadradinho {
-			width: 18px;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="row">
-		<div class="col face" id="b">
-			<div class="0x0 quadradinho"></div>
-			<div class="0x1 quadradinho"></div>
-			<div class="0x2 quadradinho"></div>
-			<div class="1x0 quadradinho"></div>
-			<div class="1x1 quadradinho"></div>
-			<div class="1x2 quadradinho"></div>
-			<div class="2x0 quadradinho"></div>
-			<div class="2x1 quadradinho"></div>
-			<div class="2x2 quadradinho"></div>
-		</div>
-		<div class="col hidden face">
-		</div>
-		<div class="col hidden face">
-		</div>
-	</div>
+		<div class="col col-x-offset-2 col-m-offset-5">
+			<div class="row">
+				<div class="col face" id="b">
+					<div class="0x0 quadradinho"></div>
+					<div class="0x1 quadradinho"></div>
+					<div class="0x2 quadradinho"></div>
+					<div class="1x0 quadradinho"></div>
+					<div class="1x1 quadradinho"></div>
+					<div class="1x2 quadradinho"></div>
+					<div class="2x0 quadradinho"></div>
+					<div class="2x1 quadradinho"></div>
+					<div class="2x2 quadradinho"></div>
+				</div>
+				<div class="col hidden face">
+				</div>
+				<div class="col hidden face">
+				</div>
+			</div>
 
-	<div class="row">
-		<div class="col hidden face">
-		</div>
-		<div class="col face" id="u">
-			<div class="0x0 quadradinho"></div>
-			<div class="0x1 quadradinho"></div>
-			<div class="0x2 quadradinho"></div>
-			<div class="1x0 quadradinho"></div>
-			<div class="1x1 quadradinho"></div>
-			<div class="1x2 quadradinho"></div>
-			<div class="2x0 quadradinho"></div>
-			<div class="2x1 quadradinho"></div>
-			<div class="2x2 quadradinho"></div>
-		</div>
-		<div class="col hidden face">
-		</div>
-	</div>
+			<div class="row">
+				<div class="col hidden face">
+				</div>
+				<div class="col face" id="u">
+					<div class="0x0 quadradinho"></div>
+					<div class="0x1 quadradinho"></div>
+					<div class="0x2 quadradinho"></div>
+					<div class="1x0 quadradinho"></div>
+					<div class="1x1 quadradinho"></div>
+					<div class="1x2 quadradinho"></div>
+					<div class="2x0 quadradinho"></div>
+					<div class="2x1 quadradinho"></div>
+					<div class="2x2 quadradinho"></div>
+				</div>
+				<div class="col hidden face">
+				</div>
+			</div>
 
-	<div class="row">
-		<div class="col face" id="l">
-			<div class="0x0 quadradinho"></div>
-			<div class="0x1 quadradinho"></div>
-			<div class="0x2 quadradinho"></div>
-			<div class="1x0 quadradinho"></div>
-			<div class="1x1 quadradinho"></div>
-			<div class="1x2 quadradinho"></div>
-			<div class="2x0 quadradinho"></div>
-			<div class="2x1 quadradinho"></div>
-			<div class="2x2 quadradinho"></div>
-		</div>
-		<div class="col face" id="f">
-			<div class="0x0 quadradinho"></div>
-			<div class="0x1 quadradinho"></div>
-			<div class="0x2 quadradinho"></div>
-			<div class="1x0 quadradinho"></div>
-			<div class="1x1 quadradinho"></div>
-			<div class="1x2 quadradinho"></div>
-			<div class="2x0 quadradinho"></div>
-			<div class="2x1 quadradinho"></div>
-			<div class="2x2 quadradinho"></div>
-		</div>
-		<div class="col face" id="r">
-			<div class="0x0 quadradinho"></div>
-			<div class="0x1 quadradinho"></div>
-			<div class="0x2 quadradinho"></div>
-			<div class="1x0 quadradinho"></div>
-			<div class="1x1 quadradinho"></div>
-			<div class="1x2 quadradinho"></div>
-			<div class="2x0 quadradinho"></div>
-			<div class="2x1 quadradinho"></div>
-			<div class="2x2 quadradinho"></div>
-		</div>
-	</div>
+			<div class="row">
+				<div class="col face" id="l">
+					<div class="0x0 quadradinho"></div>
+					<div class="0x1 quadradinho"></div>
+					<div class="0x2 quadradinho"></div>
+					<div class="1x0 quadradinho"></div>
+					<div class="1x1 quadradinho"></div>
+					<div class="1x2 quadradinho"></div>
+					<div class="2x0 quadradinho"></div>
+					<div class="2x1 quadradinho"></div>
+					<div class="2x2 quadradinho"></div>
+				</div>
+				<div class="col face" id="f">
+					<div class="0x0 quadradinho"></div>
+					<div class="0x1 quadradinho"></div>
+					<div class="0x2 quadradinho"></div>
+					<div class="1x0 quadradinho"></div>
+					<div class="1x1 quadradinho"></div>
+					<div class="1x2 quadradinho"></div>
+					<div class="2x0 quadradinho"></div>
+					<div class="2x1 quadradinho"></div>
+					<div class="2x2 quadradinho"></div>
+				</div>
+				<div class="col face" id="r">
+					<div class="0x0 quadradinho"></div>
+					<div class="0x1 quadradinho"></div>
+					<div class="0x2 quadradinho"></div>
+					<div class="1x0 quadradinho"></div>
+					<div class="1x1 quadradinho"></div>
+					<div class="1x2 quadradinho"></div>
+					<div class="2x0 quadradinho"></div>
+					<div class="2x1 quadradinho"></div>
+					<div class="2x2 quadradinho"></div>
+				</div>
+			</div>
 
-	<div class="row">
-		<div class="col hidden face">
-		</div>
-		<div class="col face" id="d">
-			<div class="0x0 quadradinho"></div>
-			<div class="0x1 quadradinho"></div>
-			<div class="0x2 quadradinho"></div>
-			<div class="1x0 quadradinho"></div>
-			<div class="1x1 quadradinho"></div>
-			<div class="1x2 quadradinho"></div>
-			<div class="2x0 quadradinho"></div>
-			<div class="2x1 quadradinho"></div>
-			<div class="2x2 quadradinho"></div>
-		</div>
-		<div class="col hidden face">
+			<div class="row">
+				<div class="col hidden face">
+				</div>
+				<div class="col face" id="d">
+					<div class="0x0 quadradinho"></div>
+					<div class="0x1 quadradinho"></div>
+					<div class="0x2 quadradinho"></div>
+					<div class="1x0 quadradinho"></div>
+					<div class="1x1 quadradinho"></div>
+					<div class="1x2 quadradinho"></div>
+					<div class="2x0 quadradinho"></div>
+					<div class="2x1 quadradinho"></div>
+					<div class="2x2 quadradinho"></div>
+				</div>
+				<div class="col hidden face">
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
